fix small image alignment in figures

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -110,6 +110,7 @@ small {
 figure {
 	display: block;
 	padding: 1rem 0;
+	text-align: center;
 	img {
 		max-width: 100%;
 	}
